--- a/styles/globals.css
+++ b/styles/globals.css
@@ -30,3 +30,67 @@ a {
 ::-webkit-scrollbar-track {
   background-color: transparent;
 }
+
+/*
+@media (-webkit-min-device-pixel-ratio: 1.25) {
+  html,
+  body {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+  }
+
+  a {
+    color: inherit;
+    text-decoration: none;
+  }
+
+  * {
+    box-sizing: border-box;
+  }
+
+  ::-webkit-scrollbar {
+    width: 4px;
+  }
+
+  ::-webkit-scrollar-thumb {
+    background-color: rgb(237, 237, 237);
+    border-radius: 40px;
+  }
+
+  ::-webkit-scrollbar-track {
+    background-color: transparent;
+  }
+}
+
+@media (-webkit-min-device-pixel-ratio: 1.5) {
+  html,
+  body {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+  }
+
+  a {
+    color: inherit;
+    text-decoration: none;
+  }
+
+  * {
+    box-sizing: border-box;
+  }
+
+  ::-webkit-scrollbar {
+    width: 4px;
+  }
+
+  ::-webkit-scrollar-thumb {
+    background-color: rgb(237, 237, 237);
+    border-radius: 40px;
+  }
+
+  ::-webkit-scrollbar-track {
+    background-color: transparent;
+  }
+}
+*/
