--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-@media (-webkit-device-pixel-ratio: 1.25) {
+/* @media (-webkit-device-pixel-ratio: 1.25) {
   * {
     zoom: 0.8;
   }
@@ -12,7 +12,7 @@
   * {
     zoom: 0.9;
   }
-}
+} */
 
 html,
 body {
